; ModuleID = '/home/carl/AnghaBench/linux/sound/pci/echoaudio/extr_mona_dsp.c_set_mixer_defaults.c'
source_filename = "/home/carl/AnghaBench/linux/sound/pci/echoaudio/extr_mona_dsp.c_set_mixer_defaults.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.echoaudio = type { i32, i32, i32 }

@DIGITAL_MODE_SPDIF_RCA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.echoaudio*)* @set_mixer_defaults to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_mixer_defaults(%struct.echoaudio* %0) #0 {
  %2 = alloca %struct.echoaudio*, align 8
  store %struct.echoaudio* %0, %struct.echoaudio** %2, align 8
  %3 = load i32, i32* @DIGITAL_MODE_SPDIF_RCA, align 4
  %4 = load %struct.echoaudio*, %struct.echoaudio** %2, align 8
  %5 = getelementptr inbounds %struct.echoaudio, %struct.echoaudio* %4, i32 0, i32 2
  store i32 %3, i32* %5, align 4
  %6 = load %struct.echoaudio*, %struct.echoaudio** %2, align 8
  %7 = getelementptr inbounds %struct.echoaudio, %struct.echoaudio* %6, i32 0, i32 0
  store i32 0, i32* %7, align 4
  %8 = load %struct.echoaudio*, %struct.echoaudio** %2, align 8
  %9 = getelementptr inbounds %struct.echoaudio, %struct.echoaudio* %8, i32 0, i32 1
  store i32 1, i32* %9, align 4
  %10 = load %struct.echoaudio*, %struct.echoaudio** %2, align 8
  %11 = call i32 @init_line_levels(%struct.echoaudio* %10)
  ret i32 %11
}

declare dso_local i32 @init_line_levels(%struct.echoaudio*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
